one more question

--- a/sixth task/sixthTask.css
+++ b/sixth task/sixthTask.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    background: linear-gradient(to top left, darkviolet, white);
+    background: linear-gradient(to top left, orangered, gray);
 }
 .vertical {
     margin-top: 20vh;
