--- a/fourth task/fourthTask.css
+++ b/fourth task/fourthTask.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    background: linear-gradient(to top left, black, red);
+    background: linear-gradient(to top left, white, dodgerblue);
 }
 .vertical {
     margin-top: 20vh;
